Shouldn't hide VK in RequestHideKeyboard() if VK is locked.

Bug: 841694
Test: Manual testing on device.
Change-Id: Ic9fe8a6dcf6c4063838070fb5cccfadfbf355f55
Reviewed-on: https://chromium-review.googlesource.com/1053622
Reviewed-by: Blake O'Hare <blakeo@chromium.org>
Commit-Queue: Yuichiro Hanada <yhanada@chromium.org>
Cr-Commit-Position: refs/heads/master@{#557786}
Former-commit-id: ee08d5f991ebda6493ceef18210e85b497a503d3